--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"apollo-server-micro": "^3.11.1",
 		"graphql": "^16.6.0",
 		"next": "^12.0.7",
+		"nexus": "^1.3.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2"
 	},
