--- a/package.json
+++ b/package.json
@@ -11,24 +11,26 @@
 		"seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
 	},
 	"dependencies": {
-		"@apollo/client": "^3.7.3",
+		"@pothos/core": "^3.24.0",
+		"@pothos/plugin-validation": "^3.8.7",
 		"@prisma/client": "^4.7.1",
 		"apollo-server-micro": "^3.11.1",
 		"graphql": "^16.6.0",
 		"next": "^12.0.7",
-		"nexus": "^1.3.0",
 		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"react-dom": "17.0.2",
+		"zod": "^3.20.2"
 	},
 	"devDependencies": {
-		"@tailwindcss/forms": "^0.4.0",
-		"@tailwindcss/typography": "^0.5.0",
+		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/typography": "^0.5.8",
 		"@types/node": "^16.3.2",
 		"@types/react": "^17.0.14",
 		"autoprefixer": "^10.4.13",
-		"postcss": "^8.4.5",
+		"postcss": "^8.4.20",
+		"postcss-reporter": "^7.0.5",
 		"prisma": "^4.7.1",
-		"tailwindcss": "^3.0.8",
+		"tailwindcss": "^3.2.4",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.3.5"
 	}
