--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
 		"seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
 	},
 	"dependencies": {
+		"@next-auth/prisma-adapter": "^1.0.5",
 		"@pothos/core": "^3.24.0",
 		"@pothos/plugin-validation": "^3.8.7",
 		"@prisma/client": "^4.7.1",
 		"apollo-server-micro": "^3.11.1",
 		"graphql": "^16.6.0",
 		"next": "^12.0.7",
+		"next-auth": "^4.18.7",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"zod": "^3.20.2"
