--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"next-auth": "^4.18.7",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"urql": "^3.0.3",
 		"zod": "^3.20.2"
 	},
 	"devDependencies": {
