--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.7.7",
 		"@next-auth/prisma-adapter": "^1.0.5",
 		"@pothos/core": "^3.24.0",
 		"@pothos/plugin-validation": "^3.8.7",
@@ -21,6 +22,7 @@
 		"next-auth": "^4.18.7",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-icons": "^4.7.1",
 		"urql": "^3.0.3",
 		"zod": "^3.20.2"
 	},
