--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@headlessui/react": "^1.7.7",
 		"@next-auth/prisma-adapter": "^1.0.5",
 		"@pothos/core": "^3.24.0",
+		"@pothos/plugin-scope-auth": "^3.16.0",
 		"@pothos/plugin-validation": "^3.8.7",
 		"@prisma/client": "^4.7.1",
 		"apollo-server-micro": "^3.11.1",
