--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.7",
+		"@hookform/resolvers": "^2.9.10",
 		"@next-auth/prisma-adapter": "^1.0.5",
 		"@pothos/core": "^3.24.0",
 		"@pothos/plugin-scope-auth": "^3.16.0",
@@ -24,6 +25,7 @@
 		"next-auth": "^4.18.7",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-hook-form": "^7.41.3",
 		"react-icons": "^4.7.1",
 		"urql": "^3.0.3",
 		"zod": "^3.20.2"
