--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@pothos/plugin-validation": "^3.8.7",
 		"@prisma/client": "^4.7.1",
 		"apollo-server-micro": "^3.11.1",
+		"clsx": "^1.2.1",
 		"graphql": "^16.6.0",
 		"next": "^12.0.7",
 		"next-auth": "^4.18.7",
